force-app/main/default/objects/Expense_Line__c/Expense_Line__c.object-meta.xml
<CustomObject>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>EXLI-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Expense Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>