force-app/main/default/objects/Expense_Line__c/fields/Entities__c.field-meta.xml
<CustomField>
    <fullName>Entities__c</fullName>
    <label>Entities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>