force-app/main/default/objects/Expense_Line__c/fields/ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAmount__c</fullName>
    <inlineHelpText>Expense Amount on Receipt, if mileage use 0.58 as IRS mandate.</inlineHelpText>
    <label>Expense Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>