force-app/main/default/objects/Expense_Line__c/fields/ExpenseDate__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDate__c</fullName>
    <inlineHelpText>Date Expense Incurred</inlineHelpText>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>