force-app/main/default/objects/Expense_Line__c/fields/ExpenseDescription__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDescription__c</fullName>
    <inlineHelpText>Name of Receipt</inlineHelpText>
    <label>Expense Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>