force-app/main/default/objects/Expense_Line__c/fields/ExpenseNumber__c.field-meta.xml
<CustomField>
    <fullName>ExpenseNumber__c</fullName>
    <label>Expense Number</label>
    <referenceTo>Expense_Number__c</referenceTo>
    <relationshipName>Expense_Line_IDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>