force-app/main/default/objects/Expense_Line__c/fields/Line_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Amount__c</fullName>
    <formula>Qty__c *  ExpenseAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>