force-app/main/default/objects/Expense_Line__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <inlineHelpText>Enter 1 for each expense item, for mileage enter miles driven</inlineHelpText>
    <label>Qty</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>